--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,5 @@
-<h1>{{title}}</h1>
+<app-nav></app-nav>
 
-<ul>
-    <li *ngFor ="let i of users">{{i.id}} - {{i.userName}}</li>
-</ul>
+<div class="container" style="margin-top: 100px;">
+<app-home></app-home>
+</div>
